--- a/custom-wigs.html
+++ b/custom-wigs.html
@@ -24,7 +24,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-            <li class="nav-item"><a class="nav-link active" href="custom-wig.html">Custom Wigs</a></li>
+            <li class="nav-item"><a class="nav-link active" href="custom-wigs.html">Custom Wigs</a></li>
             <li class="nav-item"><a class="nav-link" href="booking.html">Book Now</a></li>
           </ul>
         </div>
@@ -129,7 +129,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="custom-wig.html">Custom Wigs</a></li>
+              <li><a href="custom-wigs.html">Custom Wigs</a></li>
               <li><a href="booking.html">Book Now</a></li>
             </ul>
           </div>
