--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="custom-wig.html">Custom Wigs</a></li>
+              <li><a href="custom-wigs.html">Custom Wigs</a></li>
               <li><a href="booking.html">Book Now</a></li>
             </ul>
           </div>
