Updated mediaqueries, Booking form and Confirmation email

--- a/booking.html
+++ b/booking.html
@@ -63,43 +63,43 @@
               </div>
 
               <div class="form-group">
-                <label for="service">Select Service</label>
-                <select id="service">
-                  <option value="">-- Choose a service --</option>
-                  <optgroup label="Hair Installation">
-                    <option>Frontal Installation — ₦25,000</option>
-                    <option>Reinstall — ₦20,000</option>
-                    <option>Closure Installation — ₦18,000</option>
-                    <option>Natural Hair Ponytail — ₦10,000</option>
-                    <option>Frontal Ponytail Installation — ₦28,000</option>
-                    <option>Frontal Sew-In — ₦30,000</option>
-                    <option>Closure Sew-In — ₦25,000</option>
-                    <option>Glueless Frontal — ₦18,000</option>
-                    <option>Glueless Closure — ₦13,000</option>
-                  </optgroup>
-                  <optgroup label="Wigging">
-                    <option>Frontal Wig — ₦20,000</option>
-                    <option>Closure Wig — ₦15,000</option>
-                    <option>Rewigging Closure — ₦18,000</option>
-                    <option>Rewigging Frontal — ₦23,000</option>
-                    <option>Revamp — ₦12,000 - ₦18,000</option>
-                    <option>Deep Washing — ₦10,000</option>
-                  </optgroup>
-                  <optgroup label="Hair Styling">
-                    <option>Straightening / Bobbing — ₦5,000</option>
-                    <option>Curling — ₦7,000</option>
-                    <option>Trimming — ₦5,000</option>
-                    <option>Face Framing — ₦7,000 - ₦12,000</option>
-                    <option>Layering — ₦15,000 - ₦20,000</option>
-                  </optgroup>
-                  <optgroup label="Makeup & Barbing">
-                    <option>Bridal Makeup — Contact for pricing</option>
-                    <option>Neutral / Everyday Makeup — Contact for pricing</option>
-                    <option>Barbing — Contact for pricing</option>
-                    <option>Pixie Cut Styling — Contact for pricing</option>
-                  </optgroup>
-                </select>
-              </div>
+  <label>Select Service(s)</label>
+  <div class="services-checkbox">
+
+    <p class="checkbox-category">Hair Installation</p>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Frontal Installation — ₦25,000" /> Frontal Installation — ₦25,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Reinstall — ₦20,000" /> Reinstall — ₦20,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Closure Installation — ₦18,000" /> Closure Installation — ₦18,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Natural Hair Ponytail — ₦10,000" /> Natural Hair Ponytail — ₦10,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Frontal Ponytail Installation — ₦28,000" /> Frontal Ponytail Installation — ₦28,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Frontal Sew-In — ₦30,000" /> Frontal Sew-In — ₦30,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Closure Sew-In — ₦25,000" /> Closure Sew-In — ₦25,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Glueless Frontal — ₦18,000" /> Glueless Frontal — ₦18,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Glueless Closure — ₦13,000" /> Glueless Closure — ₦13,000</label>
+
+    <p class="checkbox-category">Wigging</p>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Frontal Wig — ₦20,000" /> Frontal Wig — ₦20,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Closure Wig — ₦15,000" /> Closure Wig — ₦15,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Rewigging Closure — ₦18,000" /> Rewigging Closure — ₦18,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Rewigging Frontal — ₦23,000" /> Rewigging Frontal — ₦23,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Revamp — ₦12,000 - ₦18,000" /> Revamp — ₦12,000 - ₦18,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Deep Washing — ₦10,000" /> Deep Washing — ₦10,000</label>
+
+    <p class="checkbox-category">Hair Styling</p>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Straightening / Bobbing — ₦5,000" /> Straightening / Bobbing — ₦5,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Curling — ₦7,000" /> Curling — ₦7,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Trimming — ₦5,000" /> Trimming — ₦5,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Face Framing — ₦7,000 - ₦12,000" /> Face Framing — ₦7,000 - ₦12,000</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Layering — ₦15,000 - ₦20,000" /> Layering — ₦15,000 - ₦20,000</label>
+
+    <p class="checkbox-category">Makeup & Barbing</p>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Bridal Makeup" /> Bridal Makeup — Contact for pricing</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Neutral / Everyday Makeup" /> Neutral / Everyday Makeup — Contact for pricing</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Barbing" /> Barbing — Contact for pricing</label>
+    <label class="checkbox-item"><input type="checkbox" name="service" value="Pixie Cut Styling" /> Pixie Cut Styling — Contact for pricing</label>
+
+  </div>
+</div>
 
               <div class="row">
                 <div class="col-md-6">
@@ -154,7 +154,6 @@
           <div class="col-lg-4 text-lg-end">
             <h6>Contact</h6>
             <p>Lagos, Nigeria</p>
-            <p>+234 903 069 706 8</p>
             <div class="footer-socials mt-3">
               <a href="https://www.instagram.com/maisonfleur_ng/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.tiktok.com/@maison_fleur" target="_blank"><i class="bi bi-tiktok"></i></a>
@@ -166,10 +165,11 @@
       </div>
     </footer>
 
-    <a href="https://wa.me/2349030697068" target="_blank" class="whatsapp-float">
-      <i class="bi bi-whatsapp"></i>
+    <a href="https://wa.me/2349027466931" target="_blank" class="whatsapp-float"></a>
+    <i class="bi bi-whatsapp"></i>
     </a>
 
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://js.paystack.co/v1/inline.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
