Media querie fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row">
           <div class="col-lg-7">
             <p class="hero-tag">Welcome to Maison Fleur</p>
-            <h1>The House of <span>Flora</span></h1>
+            <h1>House of <span>Flora</span></h1>
             <p class="hero-desc">A luxury beauty lounge offering premium hair installation, styling, makeup and custom wig services. Where beauty meets intention.</p>
             <div class="hero-btns">
               <a href="booking.html" class="btn-primary-custom">Book Appointment</a>
